welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value Maths
  var n1 = Maths.abs(n-100)
           ^nearHundred:3: error: not found: value Maths
  var n2 = Maths.abs(n-200)
           ^