welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var n1 = Maths.abs(n-100)
  var n2 = Maths.abs(n-200)
  if (n1 <= 10 || n2 <= 10 ) {
    return true
  }
  return false
}